# descmaker

./: .gitignore  CITATION.cff  LICENSE  README.md  algoritmo descmaker  algoritmo descmaker.txt  descmaker.py  log.csv  setup_linux.sh
app/: descmaker.ps1  descmaker.py  descmaker.sh  descmaker_c_builder.py  descmaker_esp32_builder.py  descmaker_espidf_builder.py  descmaker_parser.py  descmaker_python_builder.py  maker.py  requirements.txt  utils.py
app/base_code/: CMakeLists.txt  README.md  run.ps1  run.sh
app/base_code/lib/: CMakeLists.txt
app/base_code/lib/supervisor/: CMakeLists.txt  supervisor.c  supervisor.h
app/base_code/src/: main.c
app/base_code/src/event_handler/: event_handler.c  event_handler.h  events.c  events.h
app/base_code/src/supervisors/: event_handler.c  events.c  events.h  handle_event.c  handle_event.h  sup.c  sup.h
app/template/: CMakeLists-template.txt
app/template/src/: main-template.c
app/templates_c/base_code/: CMakeLists.txt  README.md  clang-analyser.py  run.sh
app/templates_c/template/: CMakeLists-template.txt
app/templates_esp-idf/base_code/: CMakeLists.txt  sdkconfig
app/templates_esp32/base_code/: README.md
app/templates_python/: pylint-analyser.py
app/templates_python/base_code/: README.md  __init__.py  main.py  pylint-analyser.py
app/templates_python/template/: README.md  main-template.py
app_c/: descmaker_parser.py  maker.py  utils.py
app_python/: maker.py  utils.py
app_python/base_code/: main.py
app_python/base_code/Supervisor/: events.py  logger.py
app_python/template/Supervisor/: events-template.py
descmaker/: descmaker.py  descmaker_parser.py  descmaker_python_builder.py
descmaker/templates_c/base_code/: README.md
descmaker/templates_c/base_code/lib/: CMakeLists.txt
docs/: .gitignore  directory_tree.eps  directory_tree_python.eps  measure_conversion_time.ps1  measure_conversion_time.sh  results.txt  table.tex  visual_readme.eps
examples/: TransmittersKallil.wmod  TransmittersSynthesis.wmod
examples/Manufacturing_System/: Manufacturing_System_models.wmod  README.md  Turn_Table.factoryio  convert_python.py  log.csv  main.py
examples/Manufacturing_System/code_python/: log.csv
examples/Manufacturing_System/factoryIOInterface/: __init__.py  config.ini  connection.py  input.py  output.py
examples/Rotating table/: 2_MesaMontagem_Flexível.wmod  README.md  case_plants.eps  case_specification.eps  convert_c.py  convert_python.py  imagens.wmod
examples/Rotating table/code_c/: CMakeLists.txt
examples/Rotating table/code_c/lib/supervisor/: supervisor.h
examples/Rotating table/code_c/src/: main.c
examples/Rotating table/code_c/src/event_handler/: events.c  events.h
examples/Rotating table/code_c/src/supervisors/: supEsteiraMesa_GiratoriaR1.c  supEsteiraMesa_GiratoriaR1.h  supR0EsteiraSensor.c  supR0EsteiraSensor.h  supR2Mesa_GiratoriaFuradeira.c  supR2Mesa_GiratoriaFuradeira.h  supR3Mesa_GiratoriaTeste.c  supR3Mesa_GiratoriaTeste.h  supR4Mesa_GiratoriaRobo.c  supR4Mesa_GiratoriaRobo.h  supR5EsteiraMesa_GiratoriaFuradeira.c  supR5EsteiraMesa_GiratoriaFuradeira.h  supR6Mesa_GiratoriaFuradeiraTeste.c  supR6Mesa_GiratoriaFuradeiraTeste.h  supR7Mesa_GiratoriaTesteRobo.c  supR7Mesa_GiratoriaTesteRobo.h  supR8EsteiraMesa_GiratoriaFuradeiraTeste.c  supR8EsteiraMesa_GiratoriaFuradeiraTeste.h  supervisor_list.c
examples/Rotating table/code_python/: .gitignore  main.py
examples/other_examples/: 1_PequenaFabrica.wmod  2_Labirinto.wmod  3_syncTransferLine.wmod  4_MesaMontagem.wmod
examples/supremica_examples/: 2_MesaMontagem_Flexível.wmod  MesaGiratoriaModular.wmod  MesaGiratoriaMonolitico.wmod  article.wmod  article_limpo.xml
examples/transmission_system/: .clang-format  CMakeLists.txt  README.md  clang-analyser.sh
examples/transmission_system/src/: main.c
supremica_examples/: 2_MesaMontagem_Flexível.wmod  CMakeLists.txt  article.wmod  example.wmod  example02.wmod  simpleSupExample.eps
trash/: setup_win.ps1
trash/app_c/: .gitignore  descmaker_builder.py  utils.py
trash/app_c/base_code/: CMakeLists.txt
trash/app_c/base_code/lib/supervisor/: CMakeLists.txt  sup_debug.h
trash/app_python/: descmaker_parser.py
(+115 files in other folders)
